Fix! - Google Map bug in High & Negative contrast

--- a/assets/less/_background.less
+++ b/assets/less/_background.less
@@ -27,6 +27,10 @@ body.pojo-a11y-negative-contrast {
 			border: 1px solid #ffffff !important;
 		}
 	}
+    div#gmap,
+    div#gmap *{
+        background: initial !important;
+    }
 }
 
 //Light Background
